fix warnings, update build plugins. update dependencies, fix javadoc, fix references to mavenjava.net
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit ca2a6a5848cfd57865f021ba3ea1aca0f6c88e07)